...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
